--- a/widget/res/values/strings.xml
+++ b/widget/res/values/strings.xml
@@ -16,5 +16,12 @@
     <string name="main_manage_date">时间</string>
     <string name="main_friends">好友</string>
 
+    <string name="xlistview_header_hint_normal">下拉刷新</string>
+    <string name="xlistview_header_hint_ready">松开刷新数据</string>
+    <string name="xlistview_header_hint_loading">正在加载...</string>
+    <string name="xlistview_header_last_time">上次更新时间：</string>
+    <string name="xlistview_footer_hint_normal">查看更多</string>
+    <string name="xlistview_footer_hint_ready">松开载入更多</string>
+    <string name="hello">hello</string>
 
 </resources>
