--- a/widget/res/values/strings.xml
+++ b/widget/res/values/strings.xml
@@ -5,23 +5,23 @@
     <string name="explanation">
         This is my first Android app-MoneyNote !  author:liz Email:lizhou828@126.com
     </string>
-    <string name="confirm">确定</string>
-    <string name="cancel">取消</string>
+    <string name="confirm">confirm</string>
+    <string name="cancel">cancel</string>
     <string name="frame_layout_demo_words">Hello ,this is  a FrameLayout demo page！</string>
-    <string name="all_country">请选择国家</string>
+    <string name="all_country">Select a country</string>
 
-    <string name="main_news">消息</string>
-    <string name="main_home">首页</string>
-    <string name="more">更多</string>
-    <string name="main_manage_date">时间</string>
-    <string name="main_friends">好友</string>
+    <string name="main_news">Message</string>
+    <string name="main_home">Portal</string>
+    <string name="more">More</string>
+    <string name="main_manage_date">Time</string>
+    <string name="main_friends">Friends</string>
 
-    <string name="xlistview_header_hint_normal">下拉刷新</string>
-    <string name="xlistview_header_hint_ready">松开刷新数据</string>
-    <string name="xlistview_header_hint_loading">正在加载...</string>
-    <string name="xlistview_header_last_time">上次更新时间：</string>
-    <string name="xlistview_footer_hint_normal">查看更多</string>
-    <string name="xlistview_footer_hint_ready">松开载入更多</string>
+    <string name="xlistview_header_hint_normal">Pull down to refresh</string>
+    <string name="xlistview_header_hint_ready">Loose to refresh data</string>
+    <string name="xlistview_header_hint_loading">Load...</string>
+    <string name="xlistview_header_last_time">Last Update Time：</string>
+    <string name="xlistview_footer_hint_normal">More</string>
+    <string name="xlistview_footer_hint_ready">Loose to load more</string>
     <string name="hello">hello</string>
 
 </resources>
