--- a/widget/res/values-zh-rCN/strings.xml
+++ b/widget/res/values-zh-rCN/strings.xml
@@ -25,5 +25,8 @@
     <string name="hello">你好</string>
     <string name="music_start">播放</string>
     <string name="music_stop">停止</string>
-
+    <string name="login">登录</string>
+    <string name="forget_password">忘记密码?</string>
+    <string name="type_username">请输入用户名(手机号码或邮箱)</string>
+    <string name="type_password">请输入密码</string>
 </resources>
